syntax = "proto3";

package main;

import "validate/validate.proto";
import "students.proto";

option go_package = "/proto/gen;grpcapipb";

service TeacherService {
  rpc GetTeachers (GetTeachersRequest) returns (Teachers);
  rpc AddTeachers (Teachers) returns (Teachers);
  rpc UpdateTeachers (Teachers) returns (Teachers);
  rpc DeleteTeachers (TeacherIds) returns (DeleteTeachersConfirmation);
  rpc GetStudentsByClassTeacher (TeacherId) returns (Students);
  rpc GetStudentCountByClassTeacher (TeacherId) returns (StudentCount);
}

message DeleteTeachersConfirmation {
  string status = 1;
  repeated string deleted_ids = 2;
}

message TeacherId {
  string id = 1;
}

message  TeacherIds {
  repeated TeacherId ids = 1;
}

message GetTeachersRequest {
  Teacher teacher = 1;
  repeated SortField sort_by = 2;
}

message Teacher {
  string id = 1;
  string first_name = 2 [(validate.rules).string = {  min_len: 1, pattern: "^[A-Za-z ]*$" }];
  string last_name = 3 [(validate.rules).string = {  min_len: 1, pattern: "^[A-Za-z ]*$" }];
  string email = 4 [(validate.rules).string = { email: true }];
  string class = 5 [(validate.rules).string = {  min_len: 1, pattern: "^[1-9][A-Z]$" }];
  string subject = 6 [(validate.rules).string = {  min_len: 1, pattern: "^[A-Za-z0-9 ]*$" }];
}

message Teachers {
  repeated Teacher teachers = 1;
}

message StudentCount {
  bool status = 1;
  int32 student_count = 2;
}

